<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Shadowsocks</string>
    <string name="menu_item_toggle_global">Toggle global mode</string>
    <string name="menu_item_get_server">Get Server List</string>
    <string name="menu_item_switch">Proxy</string>
    <string name="menu_item_about">About</string>
    <string name="menu_item_exit">Exit</string>
    <string name="config_url">Config URL</string>
    <string name="config_not_set_value">Not set</string>
    <string name="config_url_scan">Scan an QR code</string>
    <string name="config_url_manual">Type manually</string>
    <string name="config_url_scan_hint">Scan the QR code of your config url</string>
    <string name="select_app">Select App</string>
    <string name="select_app_detail">No</string>
    <string name="proxied_apps">Per-App Proxy</string>
    <string name="toaast_parse_ok">Parse Successfully</string>
    <string name="set_server_url">Set Server URL</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_more">More&#8230;</string>
    <string name="vpn_connected_status">connected</string>
    <string name="vpn_disconnected_status">disconnected</string>
    <string name="about_info">Modified by venerealulcer\r\nDeveloped By dawei\r\nSupport Android 4.0+ \r\nBase On SmartProxy
        and Shadowsocks-Java
    </string>
    <string name="exit_confirm_info">This will disconnect the VPN connection, Are you sure to exit?</string>
    <string name="err_invalid_url">The config URL is invalid.</string>
    <string name="config_url_hint">ss://method:password@host:port</string>
</resources>
