<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/menu_item_switch"
            android:showAsAction="always"
            android:title="@string/menu_item_switch"
            android:actionViewClass="android.widget.Switch"/>

    <item
            android:id="@+id/menu_item_toggle_global"
            android:title="@string/menu_item_toggle_global"/>

    <item
            android:id="@+id/menu_item_get_server"
            android:title="@string/menu_item_get_server"/>

    <item
            android:id="@+id/menu_item_set_server_url"
            android:title="@string/set_server_url"/>

    <item
            android:id="@+id/menu_item_about"
            android:title="@string/menu_item_about"/>
    <item
            android:id="@+id/menu_item_exit"
            android:title="@string/menu_item_exit"/>
</menu>
